// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSyncModelVisitor Other GraphQL types shoud support query, mutation and subscription types 1`] = `
{
  "echo": {
    "baseType": "String",
    "directives": [],
    "isList": false,
    "isNullable": true,
    "name": "echo",
    "operationType": "query",
    "parameters": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "msg",
        "type": "String",
      },
    ],
    "type": "String",
  },
  "echo2": {
    "baseType": "Todo",
    "directives": [],
    "isList": false,
    "isNullable": true,
    "name": "echo2",
    "operationType": "query",
    "parameters": [
      {
        "baseType": "ID",
        "directives": [],
        "isList": false,
        "isNullable": false,
        "name": "todoId",
        "type": "ID",
      },
    ],
    "type": "Todo",
  },
  "echo3": {
    "baseType": "Todo",
    "directives": [],
    "isList": true,
    "isListNullable": false,
    "isNullable": false,
    "name": "echo3",
    "operationType": "query",
    "parameters": [],
    "type": "Todo",
  },
  "echo4": {
    "baseType": "Phone",
    "directives": [],
    "isList": false,
    "isNullable": true,
    "name": "echo4",
    "operationType": "query",
    "parameters": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "number",
        "type": "String",
      },
    ],
    "type": "Phone",
  },
  "echo5": {
    "baseType": "CustomUnion",
    "directives": [],
    "isList": true,
    "isListNullable": false,
    "isNullable": false,
    "name": "echo5",
    "operationType": "query",
    "parameters": [],
    "type": "CustomUnion",
  },
  "echo6": {
    "baseType": "String",
    "directives": [],
    "isList": false,
    "isNullable": false,
    "name": "echo6",
    "operationType": "query",
    "parameters": [
      {
        "baseType": "CustomInput",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "customInput",
        "type": "CustomInput",
      },
    ],
    "type": "String",
  },
  "echo7": {
    "baseType": "ICustom",
    "directives": [],
    "isList": true,
    "isListNullable": false,
    "isNullable": true,
    "name": "echo7",
    "operationType": "query",
    "parameters": [],
    "type": "ICustom",
  },
  "getAllTodo": {
    "baseType": "String",
    "directives": [],
    "isList": false,
    "isNullable": true,
    "name": "getAllTodo",
    "operationType": "query",
    "parameters": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "msg",
        "type": "String",
      },
      {
        "baseType": "CustomInput",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "input",
        "type": "CustomInput",
      },
    ],
    "type": "String",
  },
}
`;

exports[`AppSyncModelVisitor Other GraphQL types shoud support query, mutation and subscription types 2`] = `
{
  "mutate": {
    "baseType": "Todo",
    "directives": [],
    "isList": false,
    "isNullable": true,
    "name": "mutate",
    "operationType": "mutation",
    "parameters": [
      {
        "baseType": "String",
        "directives": [],
        "isList": true,
        "isListNullable": false,
        "isNullable": false,
        "name": "msg",
        "type": "String",
      },
    ],
    "type": "Todo",
  },
}
`;

exports[`AppSyncModelVisitor Other GraphQL types shoud support query, mutation and subscription types 3`] = `
{
  "onMutate": {
    "baseType": "Todo",
    "directives": [],
    "isList": true,
    "isListNullable": true,
    "isNullable": false,
    "name": "onMutate",
    "operationType": "subscription",
    "parameters": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "msg",
        "type": "String",
      },
    ],
    "type": "Todo",
  },
}
`;

exports[`AppSyncModelVisitor Other GraphQL types should support input types 1`] = `
{
  "CustomInput": {
    "inputValues": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": false,
        "name": "customField1",
        "type": "String",
      },
      {
        "baseType": "BillingSource",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "customField2",
        "type": "BillingSource",
      },
      {
        "baseType": "NestedInput",
        "directives": [],
        "isList": false,
        "isNullable": false,
        "name": "customField3",
        "type": "NestedInput",
      },
    ],
    "name": "CustomInput",
    "type": "input",
  },
  "NestedInput": {
    "inputValues": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": false,
        "name": "content",
        "type": "String",
      },
    ],
    "name": "NestedInput",
    "type": "input",
  },
}
`;

exports[`AppSyncModelVisitor Other GraphQL types should support interface types 1`] = `
{
  "ICustom": {
    "fields": [
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": false,
        "name": "firstName",
        "parameters": [],
        "type": "String",
      },
      {
        "baseType": "String",
        "directives": [],
        "isList": false,
        "isNullable": true,
        "name": "lastName",
        "parameters": [],
        "type": "String",
      },
      {
        "baseType": "INestedCustom",
        "directives": [],
        "isList": true,
        "isListNullable": false,
        "isNullable": false,
        "name": "birthdays",
        "parameters": [],
        "type": "INestedCustom",
      },
    ],
    "name": "ICustom",
    "type": "interface",
  },
  "INestedCustom": {
    "fields": [
      {
        "baseType": "AWSDate",
        "directives": [],
        "isList": false,
        "isNullable": false,
        "name": "birthDay",
        "parameters": [],
        "type": "AWSDate",
      },
    ],
    "name": "INestedCustom",
    "type": "interface",
  },
}
`;

exports[`AppSyncModelVisitor Other GraphQL types should support union types 1`] = `
{
  "CustomUnion": {
    "name": "CustomUnion",
    "type": "union",
    "typeNames": [
      "Todo",
      "Phone",
    ],
  },
}
`;
